--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/add_post.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/add_post.html
@@ -2,6 +2,25 @@
 {% load i18n %}
 {% load fbc %}
 {% block crumb %}<a href="/">{% trans "Home" %}</a> > <a href="/forum/">{% trans "Forum Index" %}</a> > <a href="/forum/forum/{{ forum.id }}/">{{ forum.name }}</a> > <a href="/forum/topic/{{ topic.last_pagination_page }}/{{ topic.id }}/">{{ topic.name }}</a>{% endblock %}
+
+{% block meta %}
+<link rel="stylesheet" type="text/css" href="/site_media/layout/markitup/skins/simple/style.css" />
+<link rel="stylesheet" type="text/css" href="/site_media/layout/markitup/sets/bbcode/style.css" />
+<script type="text/javascript" src="/site_media/layout/markitup/jquery.markitup.js"></script>
+<script type="text/javascript" src="/site_media/layout/markitup/sets/bbcode/set.js"></script>
+
+<script language="javascript">
+$(document).ready(function()    {
+    $('#bbcode').markItUp(myBbcodeSettings);
+
+    $('#emoticons a').click(function() {
+        emoticon = $(this).attr("title");
+        $.markItUp( { replaceWith:emoticon } );
+    });
+});
+</script>
+{% endblock %}
+
 {% block content %}
 <form method="post" action="/forum/add_post/{{ topic.id }}/">
 <div class="postform">
@@ -9,8 +28,16 @@
         <div class="leftpostform">
 		<strong>{% trans "Content" %}</strong>
 	</div>
-	<div class="rightpostform">	
-	      <textarea name="text" id="id_text" onkeyup="fit_textarea(this);" rows="6">{% if text %}{{ text }}{% else %}{{ quote_text }}{% endif %}</textarea>
+	<div class="rightpostform">
+		<div id="emoticons">
+			<a href="#" title=":p"><img src="/site_media/layout/markitup/sets/bbcode/images/emoticon-happy.png" /></a>
+			<a href="#" title=":("><img src="/site_media/layout/markitup/sets/bbcode/images/emoticon-unhappy.png" /></a>
+			<a href="#" title=":o"><img src="/site_media/layout/markitup/sets/bbcode/images/emoticon-surprised.png" /></a>
+			<a href="#" title=":p"><img src="/site_media/layout/markitup/sets/bbcode/images/emoticon-tongue.png" /></a>
+			<a href="#" title=";)"><img src="/site_media/layout/markitup/sets/bbcode/images/emoticon-wink.png" /></a>
+			<a href="#" title=":D"><img src="/site_media/layout/markitup/sets/bbcode/images/emoticon-smile.png" /></a>
+		</div>
+	      <textarea name="text" id="bbcode" rows="6">{% if text %}{{ text }}{% else %}{{ quote_text }}{% endif %}</textarea>
                     {% if form.text.errors %}<br />*** {{ form.text.errors|join:", " }}{% endif %}
 	</div>
         <div class="leftpostform">
