--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/topics_list.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/topics_list.html
@@ -5,6 +5,25 @@
 {% block title %}{% trans "Topics from" %} "{{ forum.name }}"{% endblock %}
 {% block header %}{% trans "Topics from" %} "{{ forum.name }}"{% endblock %}
 {% block crumb %}<a href="/">{% trans "Home" %}</a> > <a href="/forum/">{% trans "Forum Index" %}</a> > <a href="/forum/forum/{{ forum.id }}/">{{ forum.name }}</a>{% endblock %}
+
+{% block meta %}
+<link rel="stylesheet" type="text/css" href="/site_media/layout/markitup/skins/simple/style.css" />
+<link rel="stylesheet" type="text/css" href="/site_media/layout/markitup/sets/bbcode/style.css" />
+<script type="text/javascript" src="/site_media/layout/markitup/jquery.markitup.js"></script>
+<script type="text/javascript" src="/site_media/layout/markitup/sets/bbcode/set.js"></script>
+
+<script language="javascript">
+$(document).ready(function()    {
+    $('#bbcode').markItUp(myBbcodeSettings);
+
+    $('#emoticons a').click(function() {
+        emoticon = $(this).attr("title");
+        $.markItUp( { replaceWith:emoticon } );
+    });
+});
+</script>
+{% endblock %}
+
 {% block pagemenu %}
 <li><a href="/forum/add_topic/{{ forum.id }}/">{% trans "Add New Topic" %}</a></li>
 <li><a href="/forum/">{% trans "Back to Forum" %}</a></li>
@@ -135,8 +154,16 @@
         <div class="leftpostform">
 		<strong>{% trans "Content" %}</strong>
 	</div>
-	<div class="rightpostform">	
-	      <textarea name="text" id="id_text" onkeyup="fit_textarea(this);" rows="6">{{ post_text }}</textarea>
+	<div class="rightpostform">
+		<div id="emoticons">
+			<a href="#" title=":p"><img src="/site_media/layout/markitup/sets/bbcode/images/emoticon-happy.png" /></a>
+			<a href="#" title=":("><img src="/site_media/layout/markitup/sets/bbcode/images/emoticon-unhappy.png" /></a>
+			<a href="#" title=":o"><img src="/site_media/layout/markitup/sets/bbcode/images/emoticon-surprised.png" /></a>
+			<a href="#" title=":p"><img src="/site_media/layout/markitup/sets/bbcode/images/emoticon-tongue.png" /></a>
+			<a href="#" title=";)"><img src="/site_media/layout/markitup/sets/bbcode/images/emoticon-wink.png" /></a>
+			<a href="#" title=":D"><img src="/site_media/layout/markitup/sets/bbcode/images/emoticon-smile.png" /></a>
+		</div>
+	      <textarea name="text" id="bbcode" rows="6">{{ post_text }}</textarea>
 	</div>
         {% if perms.is_staff %}
             <div class="leftpostform"><strong>{% trans "Options" %}</strong>
