--- a/trunk/diamandas/pages/templates/pages/body.html
+++ b/trunk/diamandas/pages/templates/pages/body.html
@@ -7,7 +7,7 @@
 <meta name="Robots" content="index,follow" />
 <link rel="stylesheet" href="/site_media/layout/style.css" type="text/css" />
 <link rel="shortcut icon" href="/site_media/layout/favicon.ico" />
-<!--<script src="/site_media/layout/jquery.pack.js" type="text/javascript"></script>-->
+<script src="/site_media/layout/jquery.pack.js" type="text/javascript"></script>
 <script src="/site_media/layout/biblioteka.js" type="text/javascript"></script>
 {% block meta %}{% endblock %}
 </head>
