--- a/trunk/diamandas/pages/templates/pages/rss2.html
+++ b/trunk/diamandas/pages/templates/pages/rss2.html
@@ -1,10 +1,10 @@
 <rss version="2.0"><channel>
-<title>Biblioteka Riklaunima  - {{ domain }}</title>
+<title>{{ site_name }}</title>
 <link>http://www.{{ domain }}/</link>
-<description>Artykuły i Wiadomości z {{ domain }}</description>
+<description>{{ site_desc }}</description>
 <language>pl</language>
 <image>
-<title>Biblioteka Riklaunima  - {{ domain }}</title>
+<title>{{ site_name }}</title>
 <url>http://www.{{ domain }}/site_media/layout/tux.png</url>
 <link>http://www.{{ domain }}/</link>
 <width>132</width>
