"What's new" now is stored in database and generated on object add/edit events

--- a/trunk/diamandas/pages/templates/pages/show_index.html
+++ b/trunk/diamandas/pages/templates/pages/show_index.html
@@ -5,9 +5,7 @@
 {% block content %}
 <div id="right">
 	<h3 style="margin:0px;">{% trans "Whats new?" %}</h3>
-	{% for f in feed %}
-		<div class="feed">{{ f|safe }}</div>
-	{% endfor %}
+	{{ feed.text|safe }}
 	
 	{% if onsite %}
 	<h3 style="margin-bottom:0px;">{% trans "Users online" %}</h3>
