--- a/trunk/diamandas/pages/templates/pages/show_index.html
+++ b/trunk/diamandas/pages/templates/pages/show_index.html
@@ -15,7 +15,7 @@
 	{% endif %}
 </div>
 <div id="left">
-<h3 style="margin:0px;">{{ site_name }}</h3>
+<h3 style="margin:0px;">{{ siteName }}</h3>
 {{ home_text|safe }}
 
 </div>
