--- a/trunk/diamandas/userpanel/templates/userpanel/login.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/login.html
@@ -23,3 +23,4 @@
 
 {% endblock %}
 {% block crumb %}<a href="/">{% trans "Home" %}</a> > <a href="/user/">{% trans "User Panel" %}</a>{% endblock %}
+{% block on_user %} id="current"{% endblock %}
