--- a/trunk/diamandas/userpanel/templates/userpanel/panel.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/panel.html
@@ -25,3 +25,4 @@
 {% endif %}
 {% endblock %}
 {% block crumb %}<a href="/">{% trans "Home" %}</a> > <a href="/user/">{% trans "User Panel" %}</a>{% endblock %}
+{% block on_user %} id="current"{% endblock %}
