--- a/trunk/diamandas/userpanel/templates/userpanel/password_change.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/password_change.html
@@ -19,3 +19,4 @@
 
 {% endblock %}
 {% block crumb %}<a href="/">{% trans "Home" %}</a> > <a href="/user/">{% trans "User Panel" %}</a>{% endblock %}
+{% block on_user %} id="current"{% endblock %}
