--- a/trunk/diamandas/userpanel/templates/userpanel/password_reset_done.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/password_reset_done.html
@@ -5,3 +5,4 @@
 <div style="box"><b>{% trans "Password have been changed succesfuly" %}</b>. <a href="/">{% trans "Go to Main Page" %}</a>.</div>
 {% endblock %}
 {% block crumb %}<a href="/">{% trans "Home" %}</a> > <a href="/user/">{% trans "User Panel" %}</a>{% endblock %}
+{% block on_user %} id="current"{% endblock %}
