updated markitup to v1.1.1

--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/add_topic.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/add_topic.html
@@ -5,7 +5,7 @@
 {% block meta %}
 <link rel="stylesheet" type="text/css" href="/site_media/layout/markitup/skins/simple/style.css" />
 <link rel="stylesheet" type="text/css" href="/site_media/layout/markitup/sets/bbcode/style.css" />
-<script type="text/javascript" src="/site_media/layout/markitup/jquery.markitup.js"></script>
+<script type="text/javascript" src="/site_media/layout/markitup/jquery.markitup.pack.js"></script>
 <script type="text/javascript" src="/site_media/layout/markitup/sets/bbcode/set.js"></script>
 
 <script type="text/javascript">
