--- a/trunk/diamandas/pages/templates/pages/show.html
+++ b/trunk/diamandas/pages/templates/pages/show.html
@@ -76,7 +76,7 @@
 {% if page.coment_forum or page.place.coment_forum %}
 	<link rel="stylesheet" type="text/css" href="/site_media/layout/markitup/skins/simple/style.css" />
 	<link rel="stylesheet" type="text/css" href="/site_media/layout/markitup/sets/bbcode/style.css" />
-	<script type="text/javascript" src="/site_media/layout/markitup/jquery.markitup.js"></script>
+	<script type="text/javascript" src="/site_media/layout/markitup/jquery.markitup.pack.js"></script>
 	<script type="text/javascript" src="/site_media/layout/markitup/sets/bbcode/set.js"></script>
 	
 	<script type="text/javascript">
